enable page navigation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 website:
   title: Mediation Moderation and Conditional Process Analysis with R
+  page-navigation: true
   page-footer: 
    left: "Copyright 2023, Nicola Righetti"
    right: 
