--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: Mediation, Moderation, and Conditional Process Analysis with R
+  title: MMCP
   page-navigation: true
   page-footer: 
    left: "Copyright 2023, Nicola Righetti"
